--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div>
+        <div class="soc-contacts">
           <p class="title-soclist-footer">Social media</p>
           <ul class="icon-soclink-list-footer">
             <li class="icon-soclink">
@@ -567,7 +567,121 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <p class="footer-subscribe-text">Subscribe</p>
+          <form class="form-subscribe">
+            <label class="label-subscribe" for="user-email">
+              <input
+                class="subscribe-input"
+                id="user-email"
+                name="user-email"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="subscribe-btn" type="submit">
+              Subscribe
+              <svg class="icon-sub-plane" width="24" height="24">
+                <use href="./images/icons.svg#icon-plane"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+    <!-- Modal window -->
+    <div class="backdrop is-open">
+      <div class="modal-window">
+        <button class="btn-close-modal" type="submit">
+          <svg class="icon-btn-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <!-- NAme -->
+        <form class="modal-window-form">
+          <div class="form-box">
+            <label class="form-box-label" for="user-name">Name </label>
+          </div>
+          <div class="icon-pic">
+            <input
+              class="input-field"
+              id="user-name"
+              name="user-name"
+              type="text"
+            />
+            <svg class="form-box-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-person"></use>
+            </svg>
+          </div>
+          <!-- phone -->
+          <div class="form-box">
+            <label class="form-box-label" for="user-phone">Phone</label>
+          </div>
+          <div class="icon-pic">
+            <input
+              class="input-field"
+              id="user-phone"
+              name="user-phone"
+              type="tel"
+            />
+            <svg class="form-box-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+          </div>
+          <!-- email -->
+          <div class="form-box">
+            <label class="form-box-label" for="user-email">E-mail</label>
+          </div>
+          <div class="icon-pic">
+            <input
+              class="input-field"
+              id="user-email"
+              name="user-email"
+              type="email"
+            />
+            <svg class="form-box-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
+          </div>
+          <!-- comment -->
+          <div class="form-box">
+            <label class="form-box-label" for="user-comment">Comment</label>
+          </div>
+          <div>
+            <textarea
+              class="comment-area"
+              id="user-comment"
+              name="user-comment"
+              rows="10"
+              placeholder="Text input"
+            >
+            </textarea>
+          </div>
+          <!--Checkbox  -->
+          <div class="checkbox-box">
+            <input
+              class="visually-hidden"
+              type="checkbox"
+              id="user-privacy"
+              name="user-pravicy"
+              value="true"
+            />
+            <label
+              class="user-privacy-text"
+              for="user-privacy"
+              name="user-privacy"
+              ><span class="checking-box"></span>I accept the terms and
+              conditions of the
+              <a class="privacy-link" href="">Privacy Policy</a></label
+            >
+          </div>
+          <!-- button -->
+          <div class="btn-send-box">
+            <button class="btn-send-modal" type="submit">Send</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
