--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
+
   <body>
     <!-- Header  -->
     <header class="header-menu">
@@ -592,7 +593,7 @@
     <!-- Modal window -->
     <div class="backdrop is-open">
       <div class="modal-window">
-        <button class="btn-close-modal" type="submit">
+        <button class="btn-close-modal" type="button">
           <svg class="icon-btn-close" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
@@ -602,53 +603,54 @@
         <form class="modal-window-form">
           <div class="form-box">
             <label class="form-box-label" for="user-name">Name </label>
+            <div class="icon-pic">
+              <input
+                class="input-field"
+                id="user-name"
+                name="user-name"
+                type="text"
+              />
+              <svg class="form-box-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
           </div>
-          <div class="icon-pic">
-            <input
-              class="input-field"
-              id="user-name"
-              name="user-name"
-              type="text"
-            />
-            <svg class="form-box-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-person"></use>
-            </svg>
-          </div>
+
           <!-- phone -->
           <div class="form-box">
             <label class="form-box-label" for="user-phone">Phone</label>
+            <div class="icon-pic">
+              <input
+                class="input-field"
+                id="user-phone"
+                name="user-phone"
+                type="tel"
+              />
+              <svg class="form-box-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
           </div>
-          <div class="icon-pic">
-            <input
-              class="input-field"
-              id="user-phone"
-              name="user-phone"
-              type="tel"
-            />
-            <svg class="form-box-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-phone"></use>
-            </svg>
-          </div>
+
           <!-- email -->
           <div class="form-box">
-            <label class="form-box-label" for="user-email">E-mail</label>
+            <label class="form-box-label" for="user-email">Email</label>
+            <div class="icon-pic">
+              <input
+                class="input-field"
+                id="user-email"
+                name="user-email"
+                type="email"
+              />
+              <svg class="form-box-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
           </div>
-          <div class="icon-pic">
-            <input
-              class="input-field"
-              id="user-email"
-              name="user-email"
-              type="email"
-            />
-            <svg class="form-box-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-email"></use>
-            </svg>
-          </div>
+
           <!-- comment -->
           <div class="form-box">
             <label class="form-box-label" for="user-comment">Comment</label>
-          </div>
-          <div>
             <textarea
               class="comment-area"
               id="user-comment"
@@ -658,21 +660,25 @@
             >
             </textarea>
           </div>
+
           <!--Checkbox  -->
           <div class="checkbox-box">
             <input
-              class="visually-hidden"
+              class="visually-hidden input-checkbox"
               type="checkbox"
               id="user-privacy"
-              name="user-pravicy"
+              name="user-privacy"
               value="true"
             />
             <label
               class="user-privacy-text"
               for="user-privacy"
               name="user-privacy"
-              ><span class="checking-box"></span>I accept the terms and
-              conditions of the
+              ><span class="checking-box">
+                <svg class="checking-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-property-click"></use>
+                </svg> </span
+              >I accept the terms and conditions of the
               <a class="privacy-link" href="">Privacy Policy</a></label
             >
           </div>
