--- a/index.html
+++ b/index.html
@@ -571,10 +571,10 @@
         <div class="footer-form">
           <p class="footer-subscribe-text">Subscribe</p>
           <form class="form-subscribe">
-            <label class="label-subscribe" for="user-email">
+            <label class="label-subscribe" for="user-mail">
               <input
                 class="subscribe-input"
-                id="user-email"
+                id="user-mail"
                 name="user-email"
                 type="email"
                 placeholder="E-mail"
@@ -670,10 +670,7 @@
               name="user-privacy"
               value="true"
             />
-            <label
-              class="user-privacy-text"
-              for="user-privacy"
-              name="user-privacy"
+            <label class="user-privacy-text" for="user-privacy"
               ><span class="checking-box">
                 <svg class="checking-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-property-click"></use>
@@ -683,9 +680,7 @@
             >
           </div>
           <!-- button -->
-          <div class="btn-send-box">
-            <button class="btn-send-modal" type="submit">Send</button>
-          </div>
+          <button class="btn-send-modal" type="submit">Send</button>
         </form>
       </div>
     </div>
