--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
           </div>
 
           <!-- comment -->
-          <div class="form-box">
+          <div class="form-box comment-box">
             <label class="form-box-label" for="user-comment">Comment</label>
             <textarea
               class="comment-area"
